src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__error__tests__draw_blocks_error_custom_colors.snap
---
source: src/core/status/ui/draw_blocks/error.rs
expression: setup.terminal.backend()
---
"                                       "
" ╭────────────── Error ──────────────╮ "
" │                                   │ "
" │   Unable to exec into container   │ "
" │                                   │ "
" │         ( c ) clear error         │ "
" │                                   │ "
" │         ( q ) quit clikd          │ "
" │                                   │ "
" ╰───────────────────────────────────╯ "
"                                       "
